feat: optimize audio processing pipeline with Java 21 Virtual Threads and In-memory streaming